--- a/l200207/backend/index.html
+++ b/l200207/backend/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
 <head>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -8,12 +8,40 @@ var getAgain = _=>{
     type: "post",
     url: "http://localhost/phpfuns.php",
     data: {
-      mode: "LOGIN",
+      // mode: "LOGIN",
+      // data: JSON.stringify({
+      //   email: "demo@edeitic.com",
+      //   password: "demo@edeitic.com",
+      //   pss:"pss",
+      // }),
+
+      mode: "REGISTER",
       data: JSON.stringify({
-        email: "demo@edeitic.com",
-        password: "demo@edeitic.com",
-        pss:"pss",
+        address_c_area: "xyz",
+        address_c_city: "xyz",
+        address_c_country: "xyz",
+        address_c_houseno: "xyz",
+        address_c_pincode: "101",
+        address_c_state: "xyz",
+        address_p_area: "xyz",
+        address_p_city: "xyz",
+        address_p_country: "xyz",
+        address_p_houseno: "xyz",
+        address_p_pincode: "101",
+        address_p_state: "xyz",
+        boss: "1560156094493",
+        contactno: "7897897899",
+        fname: "Elon",
+        lname: "Musk",
+        email: "elonmusk@edeitic.com",
+        mname: "-",
+        permission: "0",
+        post: "23",
+        prid: "1564462044190",
+        title: "Mr"
       }),
+
+
     },
     success: (res, status, data) => {
       $('body').html(res);
@@ -26,4 +54,227 @@ window.onclick = getAgain;
 </head>
 <body>
 </body>
-</html>
+</html> -->
+
+
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<script>
+  // $(document).click(evt=>window.location.reload())
+  $(document).click(function() {
+    location.reload();
+  })
+  var callURL = data2post => {
+    // data2post.data.prid = 1560156094492
+    data2post.data = JSON.stringify(data2post.data)
+    $.ajax({
+      method: "post",
+      url: "http://localhost/phpfuns.php",
+      // url: "http://localhost:9000/phpfuns_shraddheya.php",
+      data: data2post,
+      success: (res, status, data) => {
+        $('div,pre').remove()
+        console.log("res :", res)
+        // console.log("resJS : ", JSON.parse(res.substr(res.indexOf('success') + 7)))
+        console.log("data2post : ", data2post)
+        var el1 = document.createElement('div')
+        var el2 = document.createElement('pre')
+        // console.log(el1)
+        // console.log(el2)
+        el1.innerHTML = res + "<br>data2post : "
+        el2.innerHTML = JSON.stringify(data2post, undefined, 2)
+        document.body.appendChild(el1)
+        document.body.appendChild(el2)
+      },
+      error: e => {
+        console.log(data2post)
+        console.log("Error")
+        console.log(e)
+      },
+      complete: (req, status, xhr) => {
+        console.log("Completed")
+      }
+    })
+  }
+
+
+  //#region data2post region 1
+  // callURL({
+  //   mode: "GETCARDID",
+  //   data: {
+  //     tagdata: "157440462"
+  //   }
+  // })
+
+  // callURL({
+  //   mode: "DLTUSER",
+  //   data: {
+  //    prid: "1560156094490"
+  //   }
+  // })
+
+
+  // callURL({
+  //   mode: "SALARYSLIP",
+  //   data: {
+  //    prid: "1576729391917"
+  //   }
+  // })
+
+  // callURL({
+  //   mode: "CURRENT_SALARY",
+  //   data: {
+  //    prid: "1576729391917",
+  //    current_salary: "100"
+  //   }
+  // })
+
+  // callURL({
+  //   mode: "GETATTENDANCE",
+  //   data: {
+  //    prid: "1576729391917",
+  //    month : 2019-07-30,
+  //     year : 2019-07-30
+  //   }
+  // })
+
+  // callURL({
+  //   mode: "ISLOGGEDIN",
+  //   data: {
+  //    email: "saylor@edeitic.com"
+  //   }
+  // })
+
+  // callURL({
+  //   mode: "UPLOADPICTURE",
+  //   data: {
+  //     prid: "321654987",
+  //    picture: "saylor@edeitic.com"
+  //   }
+  // })
+
+
+  // callURL({
+  //   mode: "UPDATE_USERS",
+  //   data: {
+  //     prid: "1560156094518",
+  //    email: "Chaniya@edeitic.com"
+  //   }
+  // })
+
+  // callURL({
+  //   mode : "NEWUSERS",
+  //   data : {
+  //    email: "varun@edeitc.com"
+  //   }
+  // })
+
+  callURL({
+    mode: "LOGIN",
+    data: {
+     email: "demo@edeitic.com",
+     password: "demo@edeitic.com"
+    }
+  })
+
+  // callURL({
+  //   mode : "ISLOGGEDIN",
+  //   data : {
+  //   //  email: "saylor@edeitic.com"
+  //   }
+  // })
+
+  // callURL({
+  //   mode : "logout",
+  //   data : {
+  //   //  email: "saylor@edeitic.com"
+  //   }
+  // })
+
+  // callURL({
+  //   mode : "FORGET",
+  //   data : {
+  //    email: "exampletest@edeitic.com"
+  //   }
+  // })
+
+  // callURL({
+  //   mode : "ADMINDASHBOARD",
+  //   data : {
+  //   }
+  // })
+
+  // callURL({
+  //   mode : "ACCESSLEVELS_ADD",
+  //   data : {
+  //     name:"Door-2",
+  //     inid:"123456789",
+  //     outid:"987654321"
+  //   }
+  // })
+
+  // callURL({
+  //   mode: "SALARY_ADD",
+  //   data: {
+  //     prid:"654654654654",
+  //     basic_salary:"15000",
+  //     pf:"1000",
+  //     medical:"500",
+  //     ta:"250",
+  //     da:"250",
+  //     hra:"250",
+  //     overtime:"1200",
+  //     prepared_by:"320",
+  //     check_by:"250",
+  //     authorised_by:"250",
+  //     telephone_internet:"250",
+  //     bonus:"8000",
+  //     house_rent:"1650",
+  //     other:"230"
+  //   }
+  // })
+
+ callURL({
+    mode : "REGISTER",
+    data : {
+      address_c_area: "xyz",
+      address_c_city: "xyz",
+      address_c_country: "xyz",
+      address_c_houseno: "xyz",
+      address_c_pincode: "101",
+      address_c_state: "xyz",
+      address_p_area: "xyz",
+      address_p_city: "xyz",
+      address_p_country: "xyz",
+      address_p_houseno: "xyz",
+      address_p_pincode: "101",
+      address_p_state: "xyz",
+      boss: "1560156094493",
+      contactno: "7897897899",
+      fname: "Elon",
+      lname: "Musk",
+      email: "elonmusk@edeitic.com",
+      mname: "-",
+      permission: "0",
+      post: "23",
+      prid: "1564462044190",
+      title: "Mr"
+    }
+  })
+
+//  callURL({
+//     mode : "POSTS_DLT",
+//     data : {
+//       id: "4"
+//     }
+//   })
+
+//  callURL({
+//     mode : "POSTS_ADD",
+//     data : {
+//       post: "Chief-Executive"
+//     }
+//   })
+
+
+</script>
