--- a/l200207/backend/index.html
+++ b/l200207/backend/index.html
@@ -204,14 +204,14 @@ window.onclick = getAgain;
   //   }
   // })
 
-  // callURL({
-  //   mode : "ACCESSLEVELS_ADD",
-  //   data : {
-  //     name:"Door-2",
-  //     inid:"123456789",
-  //     outid:"987654321"
-  //   }
-  // })
+  callURL({
+    mode : "ACCESSLEVELS_ADD",
+    data : {
+      name:"Door-2",
+      inid:"123456789",
+      outid:"987654321"
+    }
+  })
 
   // callURL({
   //   mode: "SALARY_ADD",
@@ -234,33 +234,38 @@ window.onclick = getAgain;
   //   }
   // })
 
- callURL({
-    mode : "REGISTER",
-    data : {
-      address_c_area: "xyz",
-      address_c_city: "xyz",
-      address_c_country: "xyz",
-      address_c_houseno: "xyz",
-      address_c_pincode: "101",
-      address_c_state: "xyz",
-      address_p_area: "xyz",
-      address_p_city: "xyz",
-      address_p_country: "xyz",
-      address_p_houseno: "xyz",
-      address_p_pincode: "101",
-      address_p_state: "xyz",
-      boss: "1560156094493",
-      contactno: "7897897899",
-      fname: "Elon",
-      lname: "Musk",
-      email: "elonmusk@edeitic.com",
-      mname: "-",
-      permission: "0",
-      post: "23",
-      prid: "1564462044190",
-      title: "Mr"
-    }
-  })
+//  callURL({
+//     mode : "REGISTER",
+//     data : {
+//       address_c_area: "xyz",
+//       address_c_city: "xyz",
+//       address_c_country: "xyz",
+//       address_c_houseno: "xyz",
+//       address_c_pincode: "101",
+//       address_c_state: "xyz",
+//       address_p_area: "xyz",
+//       address_p_city: "xyz",
+//       address_p_country: "xyz",
+//       address_p_houseno: "xyz",
+//       address_p_pincode: "101",
+//       address_p_state: "xyz",
+//       boss: "1560156094493",
+//       contactno: "7897897899",
+//       fname: "Elon",
+//       lname: "Musk",
+//       email: "elonmusk@edeitic.com",
+//       mname: "-",
+//       permission: "0",
+//       post: "23",
+//       prid: "1564462044190",
+//       title: "Mr"
+//     }
+//   })
+
+// callURL({
+//   mode:"NOTIFICATION",
+//   data: {whom: "1560156094488"}
+// })
 
 //  callURL({
 //     mode : "POSTS_DLT",
