php local changes

--- a/l200207/backend/index.html
+++ b/l200207/backend/index.html
@@ -144,13 +144,13 @@
   //   }
   // })
 
-  // callURL({
-  //   mode: "LOGIN",
-  //   data: {
-  //     email: "demo@edeitic.com",
-  //     password: "demo@edeitic.com"
-  //   }
-  // })
+  callURL({
+    mode: "LOGIN",
+    data: {
+      email: "demo@edeitic.com",
+      password: "demo@edeitic.com"
+    }
+  })
 
   // callURL({
   //   mode : "ISLOGGEDIN",
@@ -162,7 +162,7 @@
   // callURL({
   //   mode : "logout",
   //   data : {
-  //   //  email: "saylor@edeitic.com"
+  //    email: "saylor@edeitic.com"
   //   }
   // })
 
