--- a/l200207/backend/index.html
+++ b/l200207/backend/index.html
@@ -83,12 +83,12 @@
   //   }
   // })
 
-  // callURL({
-  //   mode: "DCUMENTS_ACCESSLEVELS_DLT",
-  //   data: {
-  //     id: "2"
-  //   }
-  // })
+  callURL({
+    mode: "DOCUMENTS_ACCESSLEVELS_DLT",
+    data: {
+      id: "2"
+    }
+  })
 
 
   // callURL({
