--- a/l200207/backend/index.html
+++ b/l200207/backend/index.html
@@ -42,7 +42,7 @@
   // callURL({
   //   mode: "GETCARDID",
   //   data: {
-  //     tagdata: "157440462"
+  //     tagdata: "1577940978524"
   //   }
   // })
 
@@ -99,7 +99,7 @@
   // callURL({
   //   mode: "GETATTENDANCE",
   //   data: {
-  //    prid: "1576729391917",
+  //    prid: "1560156094488",
   //    month : 2019-07-30,
   //     year : 2019-07-30
   //   }
@@ -134,13 +134,6 @@
   //   data: {
   //     prid: "1560156094518",
   //    email: "Chaniya@edeitic.com"
-  //   }
-  // })
-
-  // callURL({
-  //   mode : "NEWUSERS",
-  //   data : {
-  //    email: "varun@edeitc.com"
   //   }
   // })
 
@@ -187,13 +180,6 @@
   //   }
   // })
 
-  // callURL({
-  //   mode: "DOCUMENTS_ACCESSLEVELS_ALLOT",
-  //   data: {
-  //     prid: "1577940978527",
-  //     documents_accesslevels: "Aadhaar Card"
-  //   }
-  // })
 
   // callURL({
   //   mode: "ACCESSLEVELS_DLT",
@@ -203,54 +189,33 @@
   // })
 
 
-  // callURL({
-  //   mode: "SALARY_ADD",
-  //   data: {
-  //     prid:"654654654654",
-  //     basic_salary:"15000",
-  //     pf:"1000",
-  //     medical:"500",
-  //     ta:"250",
-  //     da:"250",
-  //     hra:"250",
-  //     overtime:"1200",
-  //     prepared_by:"320",
-  //     check_by:"250",
-  //     authorised_by:"250",
-  //     telephone_internet:"250",
-  //     bonus:"8000",
-  //     house_rent:"1650",
-  //     other:"230"
-  //   }
-  // })
-
-   callURL({
-      mode : "REGISTER",
-      data : {
-        address_c_area: "xyz",
-        address_c_city: "xyz",
-        address_c_country: "xyz",
-        address_c_houseno: "xyz",
-        address_c_pincode: "101",
-        address_c_state: "xyz",
-        address_p_area: "xyz",
-        address_p_city: "xyz",
-        address_p_country: "xyz",
-        address_p_houseno: "xyz",
-        address_p_pincode: "101",
-        address_p_state: "xyz",
-        boss: "1560156094493",
-        contactno: "7897897899",
-        fname: "Elon",
-        lname: "Musk",
-        email: "elonmusk@edeitic.com",
-        mname: "-",
-        permission: "0",
-        post: "23",
-        prid: "1564462044190",
-        title: "Mr"
-      }
-    })
+  //  callURL({
+  //     mode : "REGISTER",
+  //     data : {
+  //       address_c_area: "xyz",
+  //       address_c_city: "xyz",
+  //       address_c_country: "xyz",
+  //       address_c_houseno: "xyz",
+  //       address_c_pincode: "101",
+  //       address_c_state: "xyz",
+  //       address_p_area: "xyz",
+  //       address_p_city: "xyz",
+  //       address_p_country: "xyz",
+  //       address_p_houseno: "xyz",
+  //       address_p_pincode: "101",
+  //       address_p_state: "xyz",
+  //       boss: "1560156094493",
+  //       contactno: "7897897899",
+  //       fname: "Elon",
+  //       lname: "Musk",
+  //       email: "elonmusk@edeitic.com",
+  //       mname: "-",
+  //       permission: "0",
+  //       post: "23",
+  //       prid: "1564462044190",
+  //       title: "Mr"
+  //     }
+  //   })
 
   // callURL({
   //   mode: "NOTIFICATION",
