--- a/l200207/backend/index.html
+++ b/l200207/backend/index.html
@@ -171,6 +171,12 @@
   //   data: {}
   // })
 
+  callURL({
+    mode: "GETINITDATA",
+    data: {}
+  })
+
+
   // callURL({
   //   mode: "ACCESSLEVELS_ADD",
   //   data: {
