--- a/l200207/backend/index.html
+++ b/l200207/backend/index.html
@@ -235,12 +235,12 @@
 //     }
 //   })
 
-//  callURL({
-//     mode : "POSTS_ADD",
-//     data : {
-//       post: "Chief-Executive"
-//     }
-//   })
+ callURL({
+    mode : "POSTS_ADD",
+    data : {
+      post: "Intern1"
+    }
+  })
 
 
 </script>
