--- a/l200207/frontEndCleanShrad/src/index.html
+++ b/l200207/frontEndCleanShrad/src/index.html
@@ -5,7 +5,8 @@
   <title>FrontEndCleanShrad</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/icon" href="assets/images/seo__web_blue_1_25-512.png">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/2.1.2/sweetalert.min.js"></script>
 </head>
 <body>
   <app-root></app-root>
