--- a/l200207/backend/index.html
+++ b/l200207/backend/index.html
@@ -171,10 +171,10 @@
   //   data: {}
   // })
 
-  callURL({
-    mode: "GETINITDATA",
-    data: {}
-  })
+  // callURL({
+  //   mode: "GETINITDATA",
+  //   data: {}
+  // })
 
 
   // callURL({
@@ -195,33 +195,33 @@
   // })
 
 
-  //  callURL({
-  //     mode : "REGISTER",
-  //     data : {
-  //       address_c_area: "xyz",
-  //       address_c_city: "xyz",
-  //       address_c_country: "xyz",
-  //       address_c_houseno: "xyz",
-  //       address_c_pincode: "101",
-  //       address_c_state: "xyz",
-  //       address_p_area: "xyz",
-  //       address_p_city: "xyz",
-  //       address_p_country: "xyz",
-  //       address_p_houseno: "xyz",
-  //       address_p_pincode: "101",
-  //       address_p_state: "xyz",
-  //       boss: "1560156094493",
-  //       contactno: "7897897899",
-  //       fname: "Elon",
-  //       lname: "Musk",
-  //       email: "elonmusk@edeitic.com",
-  //       mname: "-",
-  //       permission: "0",
-  //       post: "23",
-  //       prid: "1564462044190",
-  //       title: "Mr"
-  //     }
-  //   })
+   callURL({
+      mode : "REGISTER",
+      data : {
+        address_c_area: "xyz",
+        address_c_city: "xyz",
+        address_c_country: "xyz",
+        address_c_houseno: "xyz",
+        address_c_pincode: "101",
+        address_c_state: "xyz",
+        address_p_area: "xyz",
+        address_p_city: "xyz",
+        address_p_country: "xyz",
+        address_p_houseno: "xyz",
+        address_p_pincode: "101",
+        address_p_state: "xyz",
+        boss: "1560156094488",
+        contactno: "7897897899",
+        fname: "New",
+        lname: "Add",
+        email: "newuser@edeitic.com",
+        mname: "User",
+        permission: "0",
+        post: "23",
+        prid: "1564462044190",
+        title: "Mr"
+      }
+    })
 
   // callURL({
   //   mode: "NOTIFICATION",
@@ -235,12 +235,12 @@
 //     }
 //   })
 
- callURL({
-    mode : "POSTS_ADD",
-    data : {
-      post: "Intern1"
-    }
-  })
+//  callURL({
+//     mode : "POSTS_ADD",
+//     data : {
+//       post: "Intern1"
+//     }
+//   })
 
 
 </script>
