--- a/l200207/backend/index.html
+++ b/l200207/backend/index.html
@@ -132,8 +132,25 @@
   // callURL({
   //   mode: "UPDATE_USERS",
   //   data: {
-  //     prid: "1560156094518",
-  //    email: "Chaniya@edeitic.com"
+  //     prid: "1560156094507",
+  //     title: "mr",
+  //     fname: "Izreal",
+  //     mname: "LOGWOOD",
+  //     lname: "Lozardoo",
+  //     email: "Izreal.LOGWOOD@edeitic.com",
+  //     contactno: "6546546545",
+  //     address_c_houseno: "DC/6",
+  //     address_c_area: "USA",
+  //     address_c_city: "USA",
+  //     address_c_state: "USA",
+  //     address_c_country: "USA",
+  //     address_c_pincode: "321",
+  //     address_p_houseno: "DC/6",
+  //     address_p_area: "USA",
+  //     address_p_city: "USA",
+  //     address_p_state: "USA",
+  //     address_p_country: "USA",
+  //     address_p_pincode: "321",
   //   }
   // })
 
@@ -171,10 +188,10 @@
   //   data: {}
   // })
 
-  // callURL({
-  //   mode: "GETINITDATA",
-  //   data: {}
-  // })
+  callURL({
+    mode: "GETINITDATA",
+    data: {}
+  })
 
 
   // callURL({
@@ -195,33 +212,33 @@
   // })
 
 
-   callURL({
-      mode : "REGISTER",
-      data : {
-        address_c_area: "xyz",
-        address_c_city: "xyz",
-        address_c_country: "xyz",
-        address_c_houseno: "xyz",
-        address_c_pincode: "101",
-        address_c_state: "xyz",
-        address_p_area: "xyz",
-        address_p_city: "xyz",
-        address_p_country: "xyz",
-        address_p_houseno: "xyz",
-        address_p_pincode: "101",
-        address_p_state: "xyz",
-        boss: "1560156094488",
-        contactno: "7897897899",
-        fname: "New",
-        lname: "Add",
-        email: "newuser@edeitic.com",
-        mname: "User",
-        permission: "0",
-        post: "23",
-        prid: "1564462044190",
-        title: "Mr"
-      }
-    })
+  //  callURL({
+  //     mode : "REGISTER",
+  //     data : {
+  //       address_c_area: "xyz",
+  //       address_c_city: "xyz",
+  //       address_c_country: "xyz",
+  //       address_c_houseno: "xyz",
+  //       address_c_pincode: "101",
+  //       address_c_state: "xyz",
+  //       address_p_area: "xyz",
+  //       address_p_city: "xyz",
+  //       address_p_country: "xyz",
+  //       address_p_houseno: "xyz",
+  //       address_p_pincode: "101",
+  //       address_p_state: "xyz",
+  //       boss: "1560156094488",
+  //       contactno: "7897897899",
+  //       fname: "New",
+  //       lname: "Add",
+  //       email: "newuser@edeitic.com",
+  //       mname: "User",
+  //       permission: "0",
+  //       post: "23",
+  //       prid: "1564462044190",
+  //       title: "Mr"
+  //     }
+  //   })
 
   // callURL({
   //   mode: "NOTIFICATION",
