All Changes Backend

--- a/l200207/backend/index.html
+++ b/l200207/backend/index.html
@@ -186,7 +186,7 @@
     data: {
       prid: "1560156094507",
       title: "mr",
-      fname: "Izreal",
+      fname: "Torento",
       mname: "LOGWOOD",
       lname: "Lozardoo",
       email: "Izreal.LOGWOOD@edeitic.com",
@@ -336,10 +336,24 @@
 //#endregion
 
  
-  LOGIN();
-  ISLOGGEDIN();
-  GETINITDATA();
-  REGISTER();
   ADMINDASHBOARD();
+  LOGIN();
+  // GETINITDATA();
+  // ISLOGGEDIN();
+  // REGISTER();
+  // SALARYSLIP();
+  // UPDATE_USERS();
+  // NOTIFICATION();
+  // ACCESSLEVELS_ADD();
+  // CURRENT_SALARY();
+  // DELETE_USERS();
+  // DOCUMENTS_ACCESSLEVELS_ADD();
+  // DOCUMENTS_ACCESSLEVELS_DLT();
+  // ACCESSLEVELS_DLT();
+  // GETATTENDANCE();
+  // logout();
+  // POSTS_ADD();
+  // POSTS_DLT();
+  UPLOADPICTURE();
 
 </script>
