--- a/l200207/backend/index.html
+++ b/l200207/backend/index.html
@@ -336,10 +336,10 @@
 //#endregion
 
  
-  ADMINDASHBOARD();
+  // ADMINDASHBOARD();
   LOGIN();
-  // GETINITDATA();
-  // ISLOGGEDIN();
+  GETINITDATA();
+  ISLOGGEDIN();
   // REGISTER();
   // SALARYSLIP();
   // UPDATE_USERS();
@@ -354,6 +354,6 @@
   // logout();
   // POSTS_ADD();
   // POSTS_DLT();
-  UPLOADPICTURE();
+  // UPLOADPICTURE();
 
 </script>
