google analytics id changed

--- a/l200207/frontEndCleanShrad/src/index.html
+++ b/l200207/frontEndCleanShrad/src/index.html
@@ -6,16 +6,18 @@
   <title>eispowered HRMS here you can access all records related office with work</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content='With the help of this website you can manage your office records like you can add the users, update the user profile , and you can also update the salary of the user and manage everything Whatever you want'>
+  <meta name="description"
+    content='With the help of this website you can manage your office records like you can add the users, update the user profile , and you can also update the salary of the user and manage everything Whatever you want'>
   <link rel="icon" type="image/icon" href="assets/images/main_9.png">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/2.1.2/sweetalert.min.js"></script>
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-164482339-1"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-165836157-2"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
-    gtag('js', new Date());
+    gtag('js', new Date()); 
   </script>
+
 </head>
 
 <body>
